# rust-pong

./: Cargo.toml
src/: ball.rs  config.rs  main.rs  paddle.rs  score.rs
