[package]
name = "pong"
version = "0.1.0"
edition = "2021"
description = "Pong game"

[dependencies]
raylib = "3.7.0"

[package.metadata.bundle]
name = "Pong"
identifier = "com.micaheltesar.pong"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Michael Tesar 2024. All rights reserved."
category = "Game"
short_description = "An example application."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
# deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
# osx_frameworks = ["raylib"]
osx_url_schemes = ["com.doe.exampleapplication"]
